--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@types/bun": "^1.3.8",
 		"svelte": "^5.48.2",
 		"svelte-adapter-bun": "^1.0.1",
 		"svelte-check": "^4.3.5",
